--- a/demo.html
+++ b/demo.html
@@ -23,7 +23,7 @@
         <!-- -->
         <label for="searchMe">Search Gift Ideas</label>
         <input type="text" name="searchMe" id="mySearchField">
-        <select id="giftIdeas" name="giftIdeasNames">
+        <select id="giftIdeas" name="giftIdeasNames" aria-label="forScreenReaders">
 
         </select>
         <button id="mySelectedButton" onclick="DisplayItem()">Display Gift</button>
@@ -41,9 +41,9 @@
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         crossorigin="anonymous"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+    <body src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"></script>
-    <script src="app.js">
+    <script src="app.js"></script>
     </body >
 </html >
