--- a/demo.html
+++ b/demo.html
@@ -2,48 +2,82 @@
 <html lang="en">
 
 <head>
-    <title>Title</title>
-    <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-
+    <title>Gift Selector</title>
     <!-- Bootstrap CSS v5.2.1 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+    <style>
+        main {
+            padding: 20px;
+        }
+
+        footer {
+            text-align: center;
+            padding: 10px;
+            margin-top: 20px;
+            background-color: #f8f9fa;
+        }
+
+        #message {
+            margin-top: 15px;
+            padding: 10px;
+            border: 1px solid #ccc;
+        }
+    </style>
 </head>
 
 <body>
     <header>
-        <!-- place navbar here -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">GiftIdeas</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Features</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Pricing</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
-    <main>
-
-        <!-- HTML for a dropdown a div is a divider (seperating parts of the website)
-            Document Get ElementById -->
-        <!-- -->
-        <label for="searchMe">Search Gift Ideas</label>
-        <input type="text" name="searchMe" id="mySearchField">
-        <select id="giftIdeas" name="giftIdeasNames" aria-label="forScreenReaders">
-
-        </select>
-        <button id="mySelectedButton" onclick="DisplayItem()">Display Gift</button>
-        <button id="myDropDowns" onclick="ClearFilters()">Clear Filters </button>
-        <div id="message">
-
+    <main class="container">
+        <div class="mb-3">
+            <label for="mySearchField" class="form-label">Search Gift Ideas:</label>
+            <input type="text" class="form-control" id="mySearchField" name="searchMe" oninput="filterDropdown()">
         </div>
-
+        <div class="mb-3">
+            <label for="giftIdeas" class="form-label">Select Gift Idea:</label>
+            <select id="giftIdeas" name="giftIdeasNames" class="form-select" aria-label="Select Gift">
+            </select>
+        </div>
+        <button id="mySelectedButton" class="btn btn-primary" onclick="displaySelectedGift()">Display Gift</button>
+        <button id="myDropDowns" class="btn btn-secondary" onclick="clearFilters()">Clear Filters</button>
+        <div id="message" class="alert alert-info" role="alert"></div>
     </main>
     <footer>
-        <!-- place footer here -->
+        <p>© 2024 Gift Ideas, Inc.</p>
     </footer>
     <!-- Bootstrap JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         crossorigin="anonymous"></script>
-
-    <body src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"></script>
     <script src="app.js"></script>
-    </body >
-</html >
+</body>
+
+</html>
